--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name" translatable="false">changeLocaleRuntimeProject</string>
-    <string name="hello">Hello!!!</string>
-    <string name="world">world</string>
+    <string name="app_name" translatable="false">changeLocaleRuntimeDemo</string>
+    <string name="hello_world">Hello World!</string>
+    <string name="second_activity">Second Activity</string>
+    <string name="next">Next</string>
 </resources>
